--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,12 +2,22 @@
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 
-logging.level.com.example.demo.mapper=debug
+# logging.level.com.example.demo.mapper=debug
 
 ## external properties
 spring.config.import=custom.properties
 
 spring.servlet.multipart.max-file-size=1MB
 spring.servlet.multipart.max-request-size=10MB
+
+# port number
+server.port=8082
+
+
+
+
+
+
+
 
 
